hive-macro/tests/macro/hive/should_fail/module_name.rs
#[hive_macro::hive]
pub mod wrong {}

fn main() {}
